<resources>
    <string name="app_name">Gan物妹</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="news_one_title">Dallas police HQ attack: Suspect believed killed during standoff</string>
    <string name="news_one_desc">and ows the dark van ramming the nose of a police car before retreating in reverse</string>

    <string name="news_two_title">Hugh Jackman says coffee can change the world</string>
    <string name="news_two_desc">(CNN)-Hugh Jackman may be finished playing Wolverine in Marvels X-Men films,but the actior still uses his superhuman powers to impact global poverty，Humanitarianism is deeply ingrained in Jackman upbringing. His father, Christopher Jackman, instilled the value of giving through his work as a volunteer accountant for charities serving the developing world.
    I suppose he was leading by example, Jackman said. Areas of poverty and extreme poverty, I learned, are not a natural state. It is man-made and solvable.</string>
    <string name="news_three_title">Australia in charge of second Test against West Indies in Jamaica</string>
    <string name="news_three_desc">Australia in charge of second Test against West Indies in Jamaica</string>
    <string name="news_four_title">Sweden royal wedding</string>
    <string name="OPEN_DRAWER_CONTENT_DESC_RES">openDrawerContentDescRes</string>
    <string name="CLOSE_DRAWER_CONTENT_DESC_RES">closeDrawerContentDescRes</string>
    <string name="snap_load_fail">加载失败，请重试</string>
    <string name="retry">重试</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="ask_saving_picture">保存至手机？</string>
    <string name="tip_empty_ganwu">宁欺白须公，\n莫欺少年穷，\n终须有日龙穿凤，\n唔信一世裤穿窿！\n \n今日辛勤的编剧们休息，木有干货看哟！\n \n如果想与我交流一起完善Gan物妹的话~\n可以联系我哟~也可以Fork这个小项目喔~ \n \n</string>
    <string name="action_refresh">刷新页面</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">在外部浏览器打开链接</string>
    <string name="tip_copy_done">复制成功</string>
    <string name="saved">保存成功</string>
    <string name="tip_open_fail">打开失败，没有找到可以开启传送门的其他应用＞﹏＜</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_about">About</string>
    <string name="nav_somewords">More</string>
    <string name="tip_about">\n \n作为我一个练手小项目，果断用上了一些我喜欢的新潮的技术~\n例如：Retrofit2、Dagger2、Realm、RxJava等~ \n当然还有我们的MD设计哟~(*^__^*)~ \n \n\n\n基本架构是高仿drakeet大神的作品，在这里感谢大神开源！感谢开源世界！！\n\n联系方式：1520941160@qq.com\n</string>
    <string name="app_name_with_introduce">Gan物妹</string>
</resources>
